feat: add team and meeting schema
