# backend/app/api/v1/router.py
@@ -1,7 +1,18 @@
 from fastapi import APIRouter
 
-from app.api.v1.endpoints import auth
+from app.api.v1.endpoints import (
+    auth,
+    meeting_participants,
+    meetings,
+    team_members,
+    teams,
+)
 
 api_router = APIRouter(prefix="/api/v1")
 
 api_router.include_router(auth.router)
+api_router.include_router(teams.router)
+api_router.include_router(team_members.router)
+api_router.include_router(meetings.team_meetings_router)
+api_router.include_router(meetings.router)
+api_router.include_router(meeting_participants.router)
