# packages/shared-types/src/index.ts
@@ -19,3 +19,26 @@ export type LoginRequest = components['schemas']['LoginRequest'];
 export type TokenResponse = components['schemas']['TokenResponse'];
 export type AuthResponse = components['schemas']['AuthResponse'];
 export type RefreshTokenRequest = components['schemas']['RefreshTokenRequest'];
+
+// 팀 타입 별칭
+export type TeamRole = components['schemas']['TeamRole'];
+export type Team = components['schemas']['Team'];
+export type TeamMember = components['schemas']['TeamMember'];
+export type TeamWithMembers = components['schemas']['TeamWithMembers'];
+export type CreateTeamRequest = components['schemas']['CreateTeamRequest'];
+export type UpdateTeamRequest = components['schemas']['UpdateTeamRequest'];
+export type TeamListResponse = components['schemas']['TeamListResponse'];
+export type InviteTeamMemberRequest = components['schemas']['InviteTeamMemberRequest'];
+export type UpdateTeamMemberRequest = components['schemas']['UpdateTeamMemberRequest'];
+
+// 회의 타입 별칭
+export type MeetingStatus = components['schemas']['MeetingStatus'];
+export type ParticipantRole = components['schemas']['ParticipantRole'];
+export type Meeting = components['schemas']['Meeting'];
+export type MeetingParticipant = components['schemas']['MeetingParticipant'];
+export type MeetingWithParticipants = components['schemas']['MeetingWithParticipants'];
+export type CreateMeetingRequest = components['schemas']['CreateMeetingRequest'];
+export type UpdateMeetingRequest = components['schemas']['UpdateMeetingRequest'];
+export type MeetingListResponse = components['schemas']['MeetingListResponse'];
+export type AddMeetingParticipantRequest = components['schemas']['AddMeetingParticipantRequest'];
+export type UpdateMeetingParticipantRequest = components['schemas']['UpdateMeetingParticipantRequest'];
